Bug 155733 - SVG: Mask applied to the wrong object
Summary: SVG: Mask applied to the wrong object
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: filter:svg
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-06-08 10:40 UTC by Xisco Faulí
Modified: 2023-06-14 12:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (802 bytes, image/svg+xml)
2023-06-08 10:40 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-06-08 10:40:06 UTC
Created attachment 187781 [details]
sample file

Steps to reproduce:
1. Open attached document and compare it with another svg visor

-> Mask is applied to both object. Only the first only should have the mask applied. if the document is changed to

  <use xlink:href="#circles" transform="translate(0 100)"/>
  <use xlink:href="#circles" transform="translate(0 50)" mask="url(#myMask)" />

then the issue is not reproducible.

reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 244f9cf66bc36f229ccb5712bc8d80166b92266d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-06-08 14:34:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/195364a57a5e3090648cb327607bc52da2be583c

tdf#155733: no need to store these values

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-08 18:56:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8274361b482f006fbab3f845c5f2e2d259a3955e

tdf#155733: no need to store these values

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-14 08:51:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c821fd07d45e2bf6b55922305001147af49613bf

tdf#155733: no need to store these values

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 stragu 2023-06-14 12:59:06 UTC
Could see the issue in:

Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (en_AU.UTF-8); UI: en-US
Calc: threaded

Verified fixed in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec60d354359067f8c5c686ef2239ee705916de43
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Xisco!

Other issue with same example file: bug 155830