tdf#155733: no need to store these values

Change-Id: I1c22f8f344731eb5fbc5f77fc80267ebcdc81ed6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152740
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>